Enlarge logo, restore contacts visibility, fix burger menu close X centering
Agent-Logs-Url: https://github.com/Mivura/Izhs-Peek-site/sessions/89577d12-aa9c-470d-a053-b0e33ae6e46f

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -321,7 +321,7 @@ content {
 }
 
 .oooo img{
-    height: 65px;
+    height: 85px;
     width: auto;
 }
 
@@ -449,8 +449,9 @@ input[type=checkbox] {
 
 input:checked ~ label.menu-btn span:nth-child(1) {
     transform: rotate(45deg);
-    top: 8px;
-    left: 9px;
+    top: 18px;
+    left: 8px;
+    transform-origin: center center;
 }
 
 input:checked ~ label.menu-btn span:nth-child(2) {
@@ -460,8 +461,9 @@ input:checked ~ label.menu-btn span:nth-child(2) {
 
 input:checked ~ label.menu-btn span:nth-child(3) {
     transform: rotate(-45deg);
-    top: 28px;
-    left: 9px;
+    top: 18px;
+    left: 8px;
+    transform-origin: center center;
 }
 
 /* Header contact info */
@@ -496,12 +498,6 @@ input:checked ~ label.menu-btn span:nth-child(3) {
 
 header label.menu-btn {
     display: none;
-}
-
-@media (max-width: 1200px) {
-    .header-contacts {
-        display: none;
-    }
 }
 
 @media (max-width: 991px) {
